# easy-kefu

./: .gitignore  CLAUDE.md  README.md  app.py  config.json  config.py  main.py  pyproject.toml  research.md
config/: __init__.py
database/knowledge_base/: chroma.sqlite3
docs/: LICENSE_GUIDE.md  technical_documentation.md
icon/: icon.icns
licenses/: trial.key  正式企业_20260329.key  测试客户_20260329.key
scripts/: app.spec  app_onedir.spec  build_dmg.py  dmg_config.py  generate_license.py  migrate_to_new_structure.py  智能客服.spec
src/: __init__.py
src/core/: __init__.py
src/core/agents/: bot.py  bot_factory.py  bot_with_rag.py
src/core/bridge/: __init__.py
src/core/channels/: channel.py
src/core/messages/: __init__.py  message_consumer.py  message_handler.py  message_queue.py
src/db/: __init__.py  db_manager.py  models.py
src/services/: __init__.py
src/services/knowledge/: __init__.py  ai_document_splitter.py  document_processor.py  ecommerce_qa_knowledge.json  ecommerce_qa_knowledge.md  knowledge_extractor.py  knowledge_sink.py  rag_retriever.py  vector_store.py  web_search.py  植物医生产品列表及功效详解.md  植物医生产品知识库.md
src/services/learning/: __init__.py  optimization_engine.py  signal_collector.py  similar_case_manager.py
src/ui/: ai_learning_ui.py  ai_test_ui.py  auto_reply_ui.py  keyword_ui.py  knowledge_base_ui.py  main_ui.py  setting_ui.py  user_ui.py
src/ui/chat_history/: __init__.py  models.py  (+6 more)
src/utils/: business_hours_queue.py  emotion_analyzer.py  license_manager.py  logger.py  performance_monitor.py  resource_manager.py  telegram_notifier.py
(+12 files in other folders)
